updates the design layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,5 +63,19 @@
     </ul>
   </div>
 
+  <div class="container">
+      <img src="/assets/images/Pointing Left (Blue Shirt).png">
+    <div class="contact-form">
+      <form action="contact.php" method="post">
+        <h1> Contact Us</h1>
+        <input type="text" name="username" placeholder="Your Name">
+        <input type="email" name="useremail" placeholder="youremail@example.com">
+        <input type="text" name="subject" placeholder="state the problem">
+        <textarea type="text" name="message" placeholder="type your message here"></textarea>
+        <button type="button" class="btn">Submit</button>
+      </form>
+    </div>
+  </div>
+
 
 </section>
