--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -99,7 +99,7 @@ header .nav li:hover {
     left: 0;
     right: 0;
     width: 100%;
-    height: 148vh;
+    height: 150vh;
     object-fit: cover;
     z-index: -1;
 }
@@ -147,6 +147,7 @@ header .nav li:hover {
 .brief {
     font-size: 25px;
     color: #65acff;
+    padding-top: 192px;
 }
 
 .services {
@@ -253,4 +254,39 @@ header .nav li:hover {
     .brief{
         font-size: 10px;
     }
+}
+.container{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 125px;
+}
+.container img{
+    width:500px;
+}
+.contact-form{
+    min-height: 70vh;
+    border: 2px solid #65acff;
+    border-radius: 25px;
+    padding: 95px;
+}
+
+form{
+   display: flex;
+   flex-direction: column;
+}
+
+form input,form textarea{
+    border: 0;
+    margin: 10px 0;
+    padding: 20px;
+    outline: 2px solid #fff;
+    background: none;
+    border-radius: 12px;
+    color: #fff;
+}
+form h1{
+    color: #65acff;
+    text-align: center;
+    font-size: 45px;
+    text-decoration: underline;
 }
