--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,7 +64,7 @@
   </div>
 
   <div class="container">
-      <img src="/assets/images/Pointing Left (Blue Shirt).png">
+    <img src="/assets/images/Pointing Left (Blue Shirt).png">
     <div class="contact-form">
       <form action="contact.php" method="post">
         <h1> Contact Us</h1>
@@ -77,5 +77,49 @@
     </div>
   </div>
 
-
 </section>
+
+<footer>
+  <div class="ft-container">
+    <div class="nav-links">
+      <ul>
+        <li><a href="#">Home </a></li>
+        <li><a href="#">Protfolio</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+    <div class="protfolio">
+      <ul>
+        <li><a href="#">Logo </a></li>
+        <li><a href="#">Poster </a></li>
+        <li><a href="#">Broucher </a></li>
+        <li><a href="#">Flyers </a></li>
+        <li><a href="#">Card</a></li>
+      </ul>
+    </div>
+  
+    <div class="socio-links">
+      <ul>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">LinkedIn</a></li>
+        <li><a href="#">Behance</a></li>
+      </ul>
+    </div>
+  
+    <div class="address">
+      <img src="/assets/images/Rapha Logo.png">
+      <p>New Bus Stand,Iritty<br>
+        Kannur, Kerala, 670706</p>
+      <div class="contact-links">
+        <img src="/assets/images/email.png"> designsrapha@gmail.com<br>
+        <img src="/assets/images/whatsapp.png"> +91 8606868080
+      </div>
+    </div>
+  </div>
+   <div class="btm">
+    <h6> Copyright 2023 <img src="/assets/images/copywrite.png"> Rapha Designs</h6>
+    <h6>Designed & Developed by <a href="https://www.instagram.com/thomas_vivek_designs/">VIVEK THOMAS</a></h6>
+   </div>
+</footer>
