--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <header>
   <a href="index.html"><img src="/assets/images/Rapha Logo.png"></a>
   <ul class="nav">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="Conatct.html">Contact</a></li>
+    <li><a routerLink="/">Home</a></li>
+    <li><a routerLink="/about">About</a></li>
+    <li><a routerLink="/contact">Contact</a></li>
   </ul>
+  
 </header>
 <section class="hero">
   <video src="/assets/images/pexels-rostislav-uzunov-7710243.mp4" autoplay muted loop></video>
