about and contact page created

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,19 @@
-<p>about works!</p>
+<header>
+    <a href="index.html"><img src="/assets/images/Rapha Logo.png"></a>
+    <ul class="nav">
+      <li><a routerLink="/">Home</a></li>
+      <li><a routerLink="/about">About</a></li>
+      <li><a routerLink="/contact">Contact</a></li>
+    </ul>
+    
+  </header>
+ 
+   <section class="hero">
+     <!-- <img src="/assets/images/banner_image.jpg"> -->
+     <div class="txt">
+        <h1>Visualising Your Ideas</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium laborum atque,
+            corrupti quidem pariatur odio reiciendis voluptas enim dolorem,dolorum quam praese
+            ntium debitis dignissimos dicta explicabo? Repellendus, ullam tempore. Pariatur!</p>
+     </div>
+   </section>
