--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,10 @@
-<p>contact works!</p>
+<header>
+    <a href="index.html"><img src="/assets/images/Rapha Logo.png"></a>
+    <ul class="nav">
+      <li><a routerLink="/">Home</a></li>
+      <li><a routerLink="/about">About</a></li>
+      <li><a routerLink="/contact">Contact</a></li>
+    </ul>
+    
+  </header>
+ 
