--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,19 +1,76 @@
 <header>
-    <a href="index.html"><img src="/assets/images/Rapha Logo.png"></a>
-    <ul class="nav">
-      <li><a routerLink="/">Home</a></li>
-      <li><a routerLink="/about">About</a></li>
-      <li><a routerLink="/contact">Contact</a></li>
-    </ul>
-    
-  </header>
- 
-   <section class="hero">
-     <!-- <img src="/assets/images/banner_image.jpg"> -->
-     <div class="txt">
-        <h1>Visualising Your Ideas</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium laborum atque,
-            corrupti quidem pariatur odio reiciendis voluptas enim dolorem,dolorum quam praese
-            ntium debitis dignissimos dicta explicabo? Repellendus, ullam tempore. Pariatur!</p>
-     </div>
-   </section>
+  <a href="index.html"><img src="/assets/images/Rapha Logo.png"></a>
+  <ul class="nav">
+    <li><a routerLink="/">Home</a></li>
+    <li><a routerLink="/about">About</a></li>
+    <li><a routerLink="/contact">Contact</a></li>
+  </ul>
+
+</header>
+
+<section class="hero">
+  <video src="/assets/images/mixkit-blue-intro-video-flying-through-blue-forms-30622-medium.mp4" autoplay muted
+    loop></video>
+  <h1>Visualising Your Ideas</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium laborum atque,
+    corrupti quidem pariatur odio reiciendis voluptas enim dolorem,dolorum quam praese
+    ntium debitis dignissimos dicta explicabo? Repellendus, ullam tempore. Pariatur!</p>
+</section>
+
+<section class="about-section">
+  <div class="about">
+    <h1>About Us</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Architecto dicta adipisci corrupti illo atque ratione magni
+      debitis, sed quibusdam similique assumenda aliquam.
+      Ratione voluptatum deserunt quibusdam error necessitatibus laborum provident!</p>
+  </div>
+  <div class="team">
+    <h1>Our Team</h1>
+
+  </div>
+</section>
+<footer>
+  <div class="ft-container">
+    <div class="nav-links">
+      <ul>
+        <li><a href="#">Home </a></li>
+        <li><a href="#">Protfolio</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+    <div class="protfolio">
+      <ul>
+        <li><a href="#">Logo </a></li>
+        <li><a href="#">Poster </a></li>
+        <li><a href="#">Broucher </a></li>
+        <li><a href="#">Flyers </a></li>
+        <li><a href="#">Card</a></li>
+      </ul>
+    </div>
+  
+    <div class="socio-links">
+      <ul>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">LinkedIn</a></li>
+        <li><a href="#">Behance</a></li>
+      </ul>
+    </div>
+  
+    <div class="address">
+      <img src="/assets/images/Rapha Logo.png">
+      <p>New Bus Stand,Iritty<br>
+        Kannur, Kerala, 670706</p>
+      <div class="contact-links">
+        <img src="/assets/images/email.png"> designsrapha@gmail.com<br>
+        <img src="/assets/images/whatsapp.png"> +91 8606868080
+      </div>
+    </div>
+  </div>
+   <div class="btm">
+    <h6> Copyright 2023 <img src="/assets/images/copywrite.png"> Rapha Designs</h6>
+    <h6>Designed & Developed by <a href="https://www.instagram.com/thomas_vivek_designs/">VIVEK THOMAS</a></h6>
+   </div>
+</footer>
