--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -20,14 +20,40 @@
 <section class="about-section">
   <div class="about">
     <h1>About Us</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-      Architecto dicta adipisci corrupti illo atque ratione magni
-      debitis, sed quibusdam similique assumenda aliquam.
-      Ratione voluptatum deserunt quibusdam error necessitatibus laborum provident!</p>
+    <p>Rapha Design is a dynamic and innovative advertising agency based in Iritty, India. We specialize in creating
+      unique and effective advertising campaigns that help our clients stand out in a crowded marketplace.
+      Our team of talented designers, writers, and marketing experts are passionate about delivering results for our
+      clients. We work closely with each client to understand their unique needs and develop a customized
+      strategy that will help them achieve their goals. From branding and logo design to social media marketing and
+      video production, we offer a wide range of services that are tailored to the needs of each individual client.
+      Whether you are a small business owner looking to build your brand, or a large corporation in need of a
+      comprehensive advertising campaign, Rapha Design has the experience and expertise to help you succeed. </p>
   </div>
-  <div class="team">
-    <h1>Our Team</h1>
 
+</section>
+
+<section class="team">
+  <h1>Our Team</h1>
+
+  <div class="team-mb">
+    <div class="team1">
+      <img src="/assets/images/pexels-janko-ferlic-3953832.jpg"><br>
+      <h4>John Doe<br>
+        Senior Designer</h4>
+    </div>
+    <div class="team2">
+      <img src="/assets/images/pexels-yuri-manei-3190334.jpg"><br>
+       <h4>Berlin Mathews<br>
+        Graphic Designer</h4>
+    </div>
+    <div class="team3">
+      <img src="/assets/images/pexels-yuri-manei-3211476.jpg"><br>
+      <h4>David Beckam<br>
+        Web Developer</h4>
+    </div>
+    
+    
+    
   </div>
 </section>
 <footer>
@@ -49,7 +75,7 @@
         <li><a href="#">Card</a></li>
       </ul>
     </div>
-  
+
     <div class="socio-links">
       <ul>
         <li><a href="#">Facebook</a></li>
@@ -58,7 +84,7 @@
         <li><a href="#">Behance</a></li>
       </ul>
     </div>
-  
+
     <div class="address">
       <img src="/assets/images/Rapha Logo.png">
       <p>New Bus Stand,Iritty<br>
@@ -69,8 +95,8 @@
       </div>
     </div>
   </div>
-   <div class="btm">
+  <div class="btm">
     <h6> Copyright 2023 <img src="/assets/images/copywrite.png"> Rapha Designs</h6>
     <h6>Designed & Developed by <a href="https://www.instagram.com/thomas_vivek_designs/">VIVEK THOMAS</a></h6>
-   </div>
+  </div>
 </footer>
